UI gaps fix: #400 Add visual sync direction line to set cloud sync modal

--- a/frontend/src/app/components/modals/set-cloud-sync-modal/set-cloud-sync-modal.less
+++ b/frontend/src/app/components/modals/set-cloud-sync-modal/set-cloud-sync-modal.less
@@ -6,15 +6,6 @@
     }
 
     .direction-line {
-        margin: -@gutter;
         font-size: @font-size2;
-    }
-
-    svg-icon.left {
-        margin-right: -2px;
-    }
-
-    svg-icon.right {
-        margin-left: -2px;
     }
 }
